tests/baselines/reference/extendsUntypedModule.types
=== /a.ts ===
import Foo from "foo";
>Foo : any

import Bar from "bar"; // error: unused
>Bar : any

export class A extends Foo { }
>A : A
>Foo : any

